objects/BP_FinancialAgreement__c.object
<CustomObject><fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Financial Agreements</relationshipLabel>
        <relationshipName>FinancialAgreements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Date__c</fullName>
        <inlineHelpText>Date of talk/agreement, payment, write off...</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>ExplainOtherExpense__c</fullName>
        <label>Explain Other Expense</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Involvement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Involvement</label>
        <referenceTo>BP_Involvement__c</referenceTo>
        <relationshipLabel>Financial Agreements</relationshipLabel>
        <relationshipName>FinancialAgreements</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>NewFoodPriceMonthly__c</fullName>
        <label>New Food Price (Monthly)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>NewHousingPriceMonthly__c</fullName>
        <label>New Housing Price (Monthly)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>NewTuitionPrice__c</fullName>
        <label>New Tuition Price</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>OtherExpense__c</fullName>
        <label>Other Expense</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>RampEndDate__c</fullName>
        <label>Ramp End Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>RampStartDate__c</fullName>
        <label>Ramp Start Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>WhoHadTalk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Who had Talk</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FinancialAgreements</relationshipName>
        <type>Lookup</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>false</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Financial Agreement</label><nameField>
        <label>Financial Agreement Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Financial Agreements</pluralLabel><sharingModel>ControlledByParent</sharingModel><visibility>Public</visibility><listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews><recordTypes>
        <fullName>Payment</fullName>
        <active>true</active>
        <label>Payment</label>
    </recordTypes><recordTypes>
        <fullName>Program</fullName>
        <active>true</active>
        <label>Program</label>
    </recordTypes><recordTypes>
        <fullName>Staff</fullName>
        <active>true</active>
        <label>Staff</label>
    </recordTypes><recordTypes>
        <fullName>WriteOff</fullName>
        <active>true</active>
        <label>Write Off</label>
    </recordTypes></CustomObject>